--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <script type="module" src="main.js"></script>
+   <link rel="stylesheet" href="../global.css">
+
 </head>
 <body>
-  <h1> Git HUb</h1>
-    
+  <header><h1>Labs</h1></header>
+  <p> Detta repository innehåller labortioner för kursen webbteknik 3</p>
+
+  <main>
+<section>
+    <ul>
+        <li><a href="1a/index.html"> Lab 1a</a></li>
+
+    </ul>
+</section>
+
+  </main>
+
+<footer> Sidan skapad av: Diana Ahmadi</footer>    
 </body>
 </html>
