Last change for lab 1

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
    <link rel="stylesheet" href="../global.css">
+   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐥</text></svg>">
 
 </head>
 <body>
+    
   <header><h1>Labs</h1></header>
+  <main>
   <p> Detta repository innehåller labortioner för kursen webbteknik 3</p>
 
-  <main>
 <section>
     <ul>
-        <li><a href="1a/index.html"> Lab 1a</a></li>
+       <a href="1a/index.html">Lab 1a - Hello Modules</a> <span class="badge done">Klar</span>
 
     </ul>
 </section>
 
-  </main>
 
+</main>
 <footer> Sidan skapad av: Diana Ahmadi</footer>    
 </body>
+
 </html>
