object data in DOM

--- a/2a/index.html
+++ b/2a/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Labb 21</h1>
     <p>Öppna konsolen för att se resultatet av JavaScript-koden.</p>
+   <div id="movie"></div>
+  
+
     
 </body>
 </html>
