--- a/2a/index.html
+++ b/2a/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="main.js"></script>
 </head>
 <body>
-    <h1>Labb 21</h1>
+    <h1>Labb 2a</h1>
     <p>Öppna konsolen för att se resultatet av JavaScript-koden.</p>
    <div id="movie"></div>
   
