--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
     </ul>
 </section>
+<section>
+    <ul>
+       <a href="2a/index.html">Lab 2a - Grundläggande JS-objekt</a> <span class="badge done">Klar</span>
+
+    </ul>
+</section>
 
 
 </main>
