End of lab 2b metoder and this.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </ul>
 </section>
 
+<section>
+    <ul>
+       <a href="2b/index.html">Lab 2b - Metoder och this</a> <span class="badge done">Klar</span>
+
+    </ul>
+</section>
+
 
 </main>
 <footer> Sidan skapad av: Diana Ahmadi</footer>    
