--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
     </ul>
 </section>
 
+<section>
+    <ul>
+       <a href="2d/index.html">Lab 2d - Ternary-operatorn </a> <span class="badge done">Klar</span>
+
+    </ul>
+</section>
+
 
 </main>
 <footer> Sidan skapad av: Diana Ahmadi</footer>    
