--- a/index.html
+++ b/index.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="../global.css">
-   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐥</text></svg>">
+    <link rel="stylesheet" href="../global.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐥</text></svg>">
 
 </head>
+
 <body>
-    
-  <header><h1>Labs</h1></header>
-  <main>
-  <p> Detta repository innehåller labortioner för kursen webbteknik 3</p>
 
-<section>
-    <ul>
-       <a href="1a/index.html">Lab 1a - Hello Modules</a> <span class="badge done">Klar</span>
+    <header>
+        <h1>Labs</h1>
+    </header>
+    <main>
+        <p> Detta repository innehåller labortioner för kursen webbteknik 3</p>
 
-    </ul>
-</section>
-<section>
-    <ul>
-       <a href="2a/index.html">Lab 2a - Grundläggande JS-objekt</a> <span class="badge done">Klar</span>
+        <section>
+            <ul>
+                <a href="1a/index.html">Lab 1a - Hello Modules</a> <span class="badge done">Klar</span>
 
-    </ul>
-</section>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <a href="2a/index.html">Lab 2a - Grundläggande JS-objekt</a> <span class="badge done">Klar</span>
 
-<section>
-    <ul>
-       <a href="2b/index.html">Lab 2b - Metoder och this</a> <span class="badge done">Klar</span>
+            </ul>
+        </section>
 
-    </ul>
-</section>
+        <section>
+            <ul>
+                <a href="2b/index.html">Lab 2b - Metoder och this</a> <span class="badge done">Klar</span>
 
-<section>
-    <ul>
-       <a href="2c/index.html">Lab 2c - localStorage</a> <span class="badge done">Klar</span>
+            </ul>
+        </section>
 
-    </ul>
-</section>
+        <section>
+            <ul>
+                <a href="2c/index.html">Lab 2c - localStorage</a> <span class="badge done">Klar</span>
 
-<section>
-    <ul>
-       <a href="2d/index.html">Lab 2d - Ternary-operatorn </a> <span class="badge done">Klar</span>
+            </ul>
+        </section>
 
-    </ul>
-</section>
+        <section>
+            <ul>
+                <a href="2d/index.html">Lab 2d - JSON </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+
+        <section>
+            <ul>
+                <a href="2e/index.html">Lab 2e - Ternary-operatorn </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
-</main>
-<footer> Sidan skapad av: Diana Ahmadi</footer>    
+    </main>
+    <footer> Sidan skapad av: Diana Ahmadi</footer>
 </body>
 
 </html>
