--- a/index.html
+++ b/index.html
@@ -58,6 +58,43 @@
 
             </ul>
         </section>
+         <section>
+            <ul>
+                <a href="3a/index.html">Lab 3a - Arrow-funktioner </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+         <section>
+            <ul>
+                <a href="3b/index.html">Lab 3b - Fetch </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+         <section>
+            <ul>
+                <a href="3c/index.html">Lab 3c - Strukturera data</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section> <section>
+            <ul>
+                <a href="3d/index.html">Lab 3d -Skapa element dynamiskt</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+
+
+        <section>
+            <ul>
+                <a href="4a/index.html">Lab 4a - Klasser och konstruktorer</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+         <section>
+            <ul>
+                <a href="4b/index.html">Lab 4b - Metoder i klasser</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
     </main>
