End of important lab 4c

--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
 
             </ul>
         </section>
+         <section>
+            <ul>
+                <a href="4c/index.html">Lab 4c - Inkapsling, important</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
     </main>
