--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 
             </ul>
         </section>
+          <section>
+            <ul>
+                <a href="4d/index.html">Lab 4d - Array.find</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
     </main>
