--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
 
             </ul>
         </section>
+         <section>
+            <ul>
+                <a href="4d/index.html">Lab 5a - Array.filter</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
     </main>
