--- a/index.html
+++ b/index.html
@@ -109,7 +109,13 @@
         </section>
          <section>
             <ul>
-                <a href="4d/index.html">Lab 5a - Array.filter</a> <span class="badge done">Klar</span>
+                <a href="5a/index.html">Lab 5a - Array.filter</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+         <section>
+            <ul>
+                <a href="5b/index.html">Lab 5b - Hantering av saknade värden, null och undefined</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
