Lab 5-d: Add greeting function

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
 
             </ul>
         </section>
+            <section>
+            <ul>
+                <a href="5c/index.html">Lab 5c -Array.map</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
 
     </main>
