5d: commits med Git

--- a/index.html
+++ b/index.html
@@ -58,24 +58,25 @@
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="3a/index.html">Lab 3a - Arrow-funktioner </a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="3b/index.html">Lab 3b - Fetch </a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="3c/index.html">Lab 3c - Strukturera data</a> <span class="badge done">Klar</span>
 
             </ul>
-        </section> <section>
+        </section>
+        <section>
             <ul>
                 <a href="3d/index.html">Lab 3d -Skapa element dynamiskt</a> <span class="badge done">Klar</span>
 
@@ -89,39 +90,46 @@
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="4b/index.html">Lab 4b - Metoder i klasser</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="4c/index.html">Lab 4c - Inkapsling, important</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-          <section>
+        <section>
             <ul>
                 <a href="4d/index.html">Lab 4d - Array.find</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="5a/index.html">Lab 5a - Array.filter</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-         <section>
+        <section>
             <ul>
                 <a href="5b/index.html">Lab 5b - Hantering av saknade värden, null och undefined</a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
-            <section>
+        <section>
             <ul>
                 <a href="5c/index.html">Lab 5c -Array.map</a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <a href="5d/index.html">Lab 5d -Återställa commits med Git
+                </a> <span class="badge done">Klar</span>
 
             </ul>
         </section>
