--- a/index.html
+++ b/index.html
@@ -133,9 +133,17 @@
 
             </ul>
         </section>
- <section>
+        <section>
             <ul>
-                <a href="5d/index.html">Lab 6a -HTML5-formulär
+                <a href="6a/index.html">Lab 6a -HTML5-formulär
+                </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
+
+         <section>
+            <ul>
+                <a href="6b/index.html">Lab 6b-Interaktiva formulärfält
                 </a> <span class="badge done">Klar</span>
 
             </ul>
