--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
 
             </ul>
         </section>
+          <section>
+            <ul>
+                <a href="6c/index.html">Lab 6c-Felhantering
+                </a> <span class="badge done">Klar</span>
+
+            </ul>
+        </section>
 
     </main>
     <footer> Sidan skapad av: Diana Ahmadi</footer>
